<resources>
    <string name="app_name">TicTacToe</string>
    <string name="homeTitle">Tic-Tac-Toe</string>
    <string name="playButton">Play</string>
    <string name="enter_your_names">Enter Your Names</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="enter_your_name">Enter First Name</string>
    <string name="enter_your_name2">Enter Second Name</string>
    <string name="name">Name</string>
    <string name="submit_names">Submit Names</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again</string>
</resources>